<resources>
    <string name="app_name_en">Sweet fish</string>
    <string name="app_name_cn">甜鱼</string>
    <string name="userPageButtonName_cn">我的</string>
    <string name="infomationPageButtonName_cn">消息</string>
    <string name="activity_home_page_goodlist_item_seller_name">商家名称</string>
    <string name="activity_home_page_goodlist_item_goods_price">￥商品价格</string>
    <string name="activity_home_page_goodlist_item_goods_name">商品名称</string>
    <string name="activity_home_page_goodlist_item_goods_preview_description">商品预览图</string>
    <string name="activity_home_page_userpageview_username_example">用户昵称</string>
    <string name="activity_home_page_userpageview_favorites">收藏</string>
    <string name="activity_home_page_userpageview_history">历史浏览</string>
    <string name="activity_home_page_userpageview_follow">关注</string>
    <string name="activity_home_page_userpageview_mybargain">我的交易</string>
    <string name="activity_home_page_userpageview_mypublish">我发布的 0</string>
    <string name="activity_home_page_userpageview_mysold">我卖出的 0</string>
    <string name="activity_home_page_userpageview_mybought">我买到的 0</string>
    <string name="activity_personal_user_page_edit">编辑资料</string>
    <string name="userRules"><![CDATA[我已经详细阅读并同意《隐私政策》和《用户协议》]]></string>
    <string name="OthersUserPageFollowButton_UnFollowed_Text">+ 关注</string>
    <string name="OthersUserPageFollowButton_Followed_Text">取消关注</string>
    <string name="activity_home_page_userpageview_fan">粉丝</string>
    <string name="activity_home_page_messagelist_item_message_picture">聊天头像</string>
    <string name="activity_home_page_messagelist_item_message_name">聊天姓名</string>
    <string name="activity_home_page_messagelist_item_message_content">聊天内容</string>
    <string name="activity_home_page_messagelist_item_message_time">聊天时间</string>
    <string name="activity_home_page_messagelist_item_goods_picture">聊天商品照片</string>
</resources>