<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <ImageView
        android:contentDescription="@string/activity_home_page_messagelist_item_message_picture"
        android:id="@+id/MessageImage"
        android:layout_width="57dp"
        android:layout_height="66dp"
        android:layout_weight="0.5"
        android:src="@null"/>
    <LinearLayout
        android:id="@+id/MessageInfoButton"
        android:orientation="vertical"
        android:layout_marginLeft="23dp"
        android:layout_width="8dp"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <TextView
            android:text="@string/activity_home_page_messagelist_item_message_name"
            android:id="@+id/MessageName"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:text="@string/activity_home_page_messagelist_item_message_content"
            android:id="@+id/MessageContent"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="#A8A8A8" />

        <TextView
            android:text="@string/activity_home_page_messagelist_item_message_time"
            android:id="@+id/MessageTime"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="1dp"
            android:layout_weight="0.5"
            android:textColor="#A8A8A8"
            android:textSize="15dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingRight="-50dp"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/activity_home_page_messagelist_item_goods_picture"
            android:id="@+id/MessageGoodImage"
            android:background="@color/white"
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
    </LinearLayout>
</LinearLayout>
