<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/GoodsInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/activity_home_page_goodlist_item_goods_preview_description"
            android:id="@+id/GoodsPreviewImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:minHeight="200dp"
            android:src="@null" />

        <TextView
            android:id="@+id/GoodsNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_home_page_goodlist_item_goods_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/GoodsPriceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_home_page_goodlist_item_goods_price"
            android:textColor="#FF0000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/SellerInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.demo.sweetfish.ui.homePage.RoundImageView
            android:id="@+id/SellerAvatarImage"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="5dp"
            app:radius="8dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/SellerNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_home_page_goodlist_item_seller_name"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>